# gpu-func

./: .gitignore  GUIDE.md  MANIFEST.in  README.md  pyproject.toml
exercises/01-haxpy/: haxpy.cu  run.py  tester.cu
exercises/01-haxpy/benchmarks/: 01_aligned_small.txt  02_aligned_large.txt  03_misaligned_large.txt
exercises/01-haxpy/runner/: __init__.py  commands.py  profile.py  results.py
exercises/01-haxpy/tests/: 01_corner_n1.txt  02_corner_prime.txt  03_easy_pow2_y0.txt  04_easy_pow2_y2.txt  05_misalign_1.txt  06_misalign_23.txt  07_subnormal_alpha.txt
exercises/01.8-reduction/: reduction.cu  run.py  tester.cu
exercises/01.8-reduction/benchmarks/: 01_small.txt  02_large.txt
exercises/01.8-reduction/runner/: cli.py  compiler.py  exercise.py  ncu_utils.py  reporter.py  testing.py
exercises/01.8-reduction/runner/include/: reporter.h  tester.h
exercises/01.8-reduction/tests/: 01_corner_n1.txt  02_small_subwarp.txt  03_pow2.txt  04_nonpow2.txt  05_negatives.txt  06_normal.txt
exercises/misc/: ascii-art.cu
exercises/saxpy/: saxpy.cu
src/gpu_func_cli/: __init__.py  bundles.py  cli.py  client.py  commands.py  constants.py  errors.py  output.py  parser.py  payloads.py  reports.py  worker_job.py
src/gpu_func_cli/assets/course_runner/: cli.py  commands.py  compiler.py  exercise.py  ncu_utils.py  profile.py  reporter.py  results.py  testing.py
tests/: test_bundles.py  test_client.py  test_output.py  test_parser.py  test_payloads.py
