[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-func-cli"
version = "0.1.0"
description = "Standalone CLI for running CUDA course exercises through the GFAAS REST API"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Aditya Jitta" }]
# TODO: choose a license (add e.g. license = "MIT" plus a LICENSE file) before publishing.
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
]

[project.urls]
# TODO: set the real repository URL before publishing.
Repository = "https://github.com/TODO/gpu_func_cli"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
gpu_func_cli = "gpu_func_cli.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
